--- a/views/register.html
+++ b/views/register.html
@@ -41,7 +41,7 @@
             <img src="images/img-home-banner.jpg" alt="Banner de ofertas">
         <main>
             
-            <div class="form" action="/" method="GET">
+            <div class="form" action="#" method="GET">
                 <div id="formularioRegistro">
                 <br>
                     <h1>Únete</h1>
