--- a/views/login.html
+++ b/views/login.html
@@ -41,7 +41,7 @@
             <img src="images/img-home-banner.jpg" alt="Banner de ofertas">
         <main>
             
-            <div class="form" action="/" method="GET">
+            <div class="form" action="#" method="GET">
                 <div id="formularioInicioS">
                 <br>
                     <h1>Iniciar sesión</h1>
